Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5990

lnet_prepare() should return errno on failure

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • None
    • None
    • 3
    • 16709

      lnet_prepare() didn't return errno on some failures

              recs = lnet_res_containers_create(LNET_COOKIE_TYPE_ME, LNET_FL_MAX_MES,
                                                sizeof(lnet_me_t));
              if (recs == NULL)
                      goto failed;
      
              ......
       failed:
              lnet_unprepare();
              return rc;
      

            liang Liang Zhen (Inactive)
            liang Liang Zhen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: