LU-5990 lnet: fix for lnet_prepare failure handling

lnet_prepare() should return errno on failure

Signed-off-by: Liang Zhen <liang.zhen@intel.com>
Change-Id: Ie86b4ba71550628e293352d8bff4d17af80e8e05
Reviewed-on: http://review.whamcloud.com/12973
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Isaac Huang <he.huang@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>